# zeta-reticula

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.agentflow-rs.tmp  Dockerfile.app  Dockerfile.master  Dockerfile.optimized  Dockerfile.worker  Dockerfile.zeta-vault  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_GUIDE.md  OPTIMIZED_BUILD.md  README-DEPLOY.md  README.md  REFACTORING_ANALYSIS.md  agentflow  build-crates.sh  build-docker-all.sh  build-order.sh  build.rs  check_requirements.sh  check_setup.sh  debug-agentflow-rs.sh  debug-go-app.sh  debug-k8s.sh  debug-rust-app.sh  deduplicate_repo.sh  deploy-k8s.sh  deploy.sh  docker-compose.full.yml  (+22 more)
agentflow-rs/: Cargo.toml  README.md  config.toml
agentflow-rs/examples/: semaphore_config.toml
agentflow-rs/src/: agentflow_quantizer.rs  anss.rs  block.rs  cache.rs  client.rs  dist_cache.rs  io.rs  lib.rs  meso.rs  mesolimbic.rs  privacy.rs  quantizer.rs  role.rs  role_inference.rs  server.rs  spot.rs  tableaux.rs
api/: .env  .env.development  Cargo.toml  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js  test-api.sh  tsconfig.json  vercel.json
api/.github/workflows/: rust-ci-cd.yml
api/.next/: BUILD_ID  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  required-server-files.json  routes-manifest.json  trace  trace 2
api/.next/cache/: .rscinfo  .tsbuildinfo
api/.next/server/: middleware-build-manifest.js  pages-manifest.json
api/k8s/: deployment-api.yaml  deployment-billing.yaml  deployment-llm.yaml  deployment-opa.yaml  hpa-billing.yaml  ingress.yaml  prometheus_deployment.yaml  service-billing.yaml
api/lua/: inference.lua  policy.lua  rbac_rules.lua
api/opa/policies/: auth.rego
api/pages/: index.tsx
api/src/: db.ts  inference_handler.rs  lib.rs  lua.rs  main.rs  model_store.rs  python.rs  quantization_handler.rs  zeta_vault.rs  zeta_vault_synergy.rs
api/src/app/: globals.css  page.tsx
api/src/components/: About.tsx  Solutions.tsx
api/src/controllers/: inferenceController.ts  modelController.ts
api/src/lib/: db.ts
api/src/middleware/: authMiddleware.ts  uploadMiddleware.ts
api/src/models/: modelMetadata.ts  userUsage.ts
api/src/routes/: inferenceRoutes.ts  modelRoutes.ts
api/src/services/: modelService.ts
api/src/utils/: billing.ts  fileUtils.ts
attention-score/: Cargo.toml
attention-score/src/: lib.rs  scheduler.rs  store.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  ping_task.rs
core/kv-cache/: Cargo.toml
core/kv-cache/src/: lib.rs
core/quantization/: Cargo.toml
core/quantization/src/: lib.rs
core/salience/: Cargo.toml
core/salience/src/: lib.rs
core/shared/: Cargo.toml
core/shared/src/: lib.rs
core/unified-input/: Cargo.toml
core/unified-input/src/: embedding.rs  error.rs  lib.rs  model_loader.rs  tokenizer.rs
interfaces/cli/: Cargo.toml
interfaces/cli/src/: lib.rs  main.rs
kvquant-deployment/: Cargo.toml
kvquant-deployment/scripts/: deploy-serverless.sh  test-deployment.sh
kvquant-deployment/src/: main.rs
kvquant-deployment/tests/: integration_test.rs
kvquant-rs/: Cargo.toml  build.rs
kvquant-rs.bak/: Cargo.toml  Cargo.toml.bak
kvquant-rs.bak/src/: block.rs  kv_cache.rs  lib.rs  spot.rs
kvquant-rs/examples/: basic.rs
kvquant-rs/src/: block.rs  inference.rs  kv_cache.rs  lib.rs  model.rs  spot.rs  tableaux.rs
kvquant-rs/tests/: basic_test.rs
llm-rs/: Cargo.toml  README.md
llm-rs/examples/: basic_usage.rs  minimal.rs  simple_test.rs
llm-rs/src/: fusion_anns.rs  inference.rs  kv_cache.rs  kv_cache_manager.rs  lib.rs  metrics.rs  model.rs  petri_net.rs  quantizer.rs  re_rank.rs  rl_optimizer.rs  util.rs  utils.rs  weight_manager.rs
master-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.toml  deploy.sh  dev.sh  docker-compose.yml  healthcheck.sh
master-service/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  rbac.yaml  service.yaml
master-service/proto/: master.proto
master-service/scripts/: setup-cicd.sh
master-service/src/: lib.rs  main.rs  service.rs
master-service/src/proto/: master.rs
master-service/terraform/: README.md
mastert-service/: Cargo.toml  Dockerfile
mastert-service/src/: gc_task.rs  lib.rs  service.rs
ns-router-rs/: Cargo.toml  Cargo.toml.bak  README.md
ns-router-rs/examples/: basic.rs
ns-router-rs/src/: context.rs  fusion_anns.rs  inference.rs  lib.rs  model.rs  rewrite_wrapper.rs  router.rs  salience.rs  strategy.rs  symbolic.rs
p2pstore/: Cargo.toml
p2pstore/src/: lib.rs
quantize-cli/: Cargo.toml  README.md
quantize-cli/src/: app.rs  config.rs  error.rs  main.rs  output.rs
quantize-cli/tests/: integration_test.rs  time_directionality_tests.rs
runtime/inference/: Cargo.toml
salience-engine/: Cargo.toml  build.rs  config.toml  package.json
salience-engine/examples/: run_server.rs
salience-engine/src/: lib.rs  main.rs  mesolimbic.rs  optimization.rs  quantization.rs  quantizer.rs  role_inference.rs  role_inferer.rs  tableaux.rs
src/p2pstore/: Cargo.toml  build.sh  docker-compose.yml  lib.rs
src/zeta_vault_synergy/: Cargo.toml  kv_cache_manager.rs  lib.rs  mod.rs  sync_manager.rs  weight_manager.rs
zeta-infer/: Cargo.toml
zeta-infer/src/: main.rs
zeta-integration/: Cargo.toml
zeta-integration/src/: main.rs
zeta-quantize/: Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml
zeta-quantize/examples/: quantize_user_llm.rs
zeta-quantize/scripts/: deploy.sh  test_integration.sh
zeta-quantize/src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  memory.rs  model.rs  neurosymbolic_engine.rs  quantization.rs  tokenizer.rs  utils.rs
zeta-sidecar/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
zeta-sidecar/dsl/: sample_config.json  schema.go
zeta-sidecar/pb/: pb.rs
zeta-sidecar/proto/: sidecar.proto
zeta-sidecar/src/: lib.rs
(+298 files in other folders)
