[workspace]
members = [
    "agentflow-rs",
    "api",
    "attention-store",
    "client",
    "kvquant_rs",
    "llm-rs",
    "master-service",
    "ns-router-rs",
    "p2pstore",
    "protos",
    "quantize-cli",
    "salience-engine",
    "shared",
    "zeta-infer",
    "zeta-integration",
    "zeta-sidecar",
    "zeta-vault-synergy"
]
resolver = "2"

[workspace.dependencies]
# Common dependencies can be listed here and inherited by workspace members
# These versions will be used by default in workspace members unless overridden

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Concurrency
dashmap = "5.4"
rayon = "1.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
log = "0.4"

# Common features
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# Common build configuration
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

