[workspace]
members = [
    # Core functionality (consolidated)
    "core/kv-cache",
    "core/quantization", 
    "core/salience",
    "core/shared",
    
    # Runtime engines (merged)
    "runtime/inference",
    
    # Interfaces (consolidated)
    "interfaces/cli",
    
    # Legacy (to be removed)
    "agentflow-rs",
    "attention-store", 
    "client",
    "kvquant_rs",
    "llm-rs",
    "master-service",
    "ns-router-rs",
    "p2pstore",
    "protos",
    # Note: legacy "shared" crate excluded to avoid naming conflict
]
resolver = "2"

[workspace.dependencies]
# Common dependencies can be listed here and inherited by workspace members
# These versions will be used by default in workspace members unless overridden

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Linear Algebra
ndarray = "0.15"

# Concurrency
dashmap = "5.4"
rayon = "1.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
log = "0.4"

# Hugging Face and Model Support
safetensors = "0.4.0"
hf-hub = "0.3.2"
tokenizers = "0.19.0"

# Common features
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# Common build configuration
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = 'unpacked'
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

