[package]
name = "agentflow_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
salience-engine = { path = "../salience-engine", optional = true, features = ["wasm"], package = "salience-engine" }
ns-router-rs = { path = "../ns-router-rs", optional = true }
kvquant_rs = { path = "../kvquant_rs", optional = true }
llm_rs = { path = "../llm-rs", optional = true, features = ["wasm"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rayon = { version = "1.8", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
dashmap = { version = "5.5", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
ndarray = { version = "0.15", optional = true }
half = { version = "2.2", optional = true }
openblas-src = { version = "0.10", optional = true }
rustc-hash = { version = "1.1", optional = true }
argmin = { version = "0.8", optional = true }
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }
mlua = { version = "0.9", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
js-sys = { version = "0.3.64", optional = true }
uuid = { version = "1.2", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
stripe = { version = "0.0.5", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
serde_qs = { version = "0.9", optional = true }
prost = { version = "0.12", optional = true }
tonic = { version = "0.10", optional = true }
thiserror = { version = "1.0", optional = true }
actix-web = { version = "4.3", optional = true }
actix-multipart = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
sled = { version = "0.34", optional = true }
crossbeam = { version = "0.8", optional = true }
bumpalo = { version = "3.19.0", optional = true }
rand_distr = { version = "0.4", optional = true }

[features]
default = ["server"]
server = ["tokio", "actix-web", "actix-multipart", "sled", "crossbeam", "dashmap", "ndarray", "half", "openblas-src", "argmin"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]
python = ["pyo3"]
lua = ["mlua"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
