[package]
name = "agentflow_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
salience-engine = { path = "../salience-engine", features = ["wasm"], package = "salience-engine" }
ns-router-rs = { path = "../ns-router-rs", optional = true }
kvquant_rs = { path = "../kvquant_rs" }
llm_rs = { path = "../llm-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rayon = { version = "1.8" }
tokio = { version = "1.0", features = ["full"] }
dashmap = { version = "5.5", optional = true }
log = { version = "0.4" }
rand = { version = "0.8" }
ndarray = { version = "0.15", optional = true }
half = { version = "2.2", optional = true }
futures = "0.3"
bumpalo = "3.15.0"
rand_distr = "0.4"
rustc-hash = { version = "1.1", optional = true }
argmin = { version = "0.8", optional = true }
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }
mlua = { version = "0.9", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
js-sys = { version = "0.3.64", optional = true }
uuid = { version = "1.2", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
stripe = { version = "0.0.5", optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
serde_qs = { version = "0.9", optional = true }
prost = { version = "0.12" }
tonic = { version = "0.10" }
thiserror = { version = "1.0", optional = true }
actix-web = { version = "4.3", optional = true }
actix-multipart = { version = "0.6", optional = true }
sled = { version = "0.34", optional = true }
crossbeam = { version = "0.8", optional = true }

[features]
default = []
server = ["actix-web", "actix-multipart", "sled", "crossbeam", "dashmap", "ndarray", "half", "argmin"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]
python = ["pyo3"]
lua = ["mlua"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
