[package]
name = "zeta-reticula-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # Enable WASM and Python bindings

[dependencies]
# Core web framework
actix-web = { version = "4.11.0", optional = true }
actix-multipart = { version = "0.6.0", optional = true }
actix-rt = { version = "2.10.0", optional = true }

# Serialization
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
serde_cbor = { version = "0.11.3", optional = true }
serde_urlencoded = { version = "0.7.1", optional = true }
serde_qs = { version = "0.12.1", optional = true }

# Async runtime
tokio = { version = "1.46.0", features = ["full"], optional = true }
futures = { version = "0.3.34", optional = true }

# Local crates
llm_rs = { path = "../llm-rs", features = ["wasm"], optional = true }
salience-engine = { path = "../salience-engine", features = ["server"], optional = true }
zeta-protos = { path = "../protos", optional = true }

# WebAssembly
wasm-bindgen = { version = "0.2.92", optional = true }
js-sys = { version = "0.3.69", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }

# Database
sled = { version = "0.34.7", optional = true }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "json"], optional = true }

# Concurrency
crossbeam = { version = "0.8.4", optional = true }
dashmap = { version = "5.5.3", optional = true }

# Numerics
ndarray = { version = "0.15.6", optional = true }
half = { version = "2.4.0", optional = true }
openblas-src = { version = "0.10.9", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
argmin = { version = "0.8.1", optional = true }

# Language bindings
pyo3 = { version = "0.21.1", optional = true, features = ["extension-module"] }
mlua = { version = "0.9.6", features = ["lua54"], optional = true }

# Utilities
uuid = { version = "1.8.0", features = ["v4"], optional = true }
chrono = { version = "0.4.38", features = ["serde"], optional = true }
log = { version = "0.4.27", optional = true }
log4rs = { version = "1.3.0", optional = true }
once_cell = { version = "1.19.0", optional = true }
thiserror = { version = "1.0.61", optional = true }
validator = { version = "0.16.1", features = ["derive"], optional = true }

# Web and API
reqwest = { version = "0.11.27", features = ["json", "blocking"], optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
oauth2 = { version = "5.0.0", optional = true }
stripe-rs = { version = "0.1.0", optional = true }

# Protocol Buffers
tonic = { version = "0.10.2", optional = true }
prost = { version = "0.12.6", optional = true }
prost-types = { version = "0.12.6", optional = true }

# Data structures
bincode = { version = "1.3.3", optional = true }
lru = { version = "0.12.3", optional = true }

[features]
enterprise = []
unlimited-inferences = []
default = [
    "server",
    "bincode",
    "futures",
    "jsonwebtoken",
    "mlua",
    "oauth2",
    "pyo3",
    "reqwest",
    "serde",
    "serde_json",
    "sqlx",
    "stripe-rs",
    "validator",
    "zeta-protos"
]
server = [
    "tokio",
    "actix-web",
    "actix-multipart",
    "sled",
    "crossbeam",
    "dashmap",
    "ndarray",
    "half",
    "openblas-src",
    "argmin",
    "bincode",
    "futures",
    "jsonwebtoken",
    "mlua",
    "oauth2",
    "pyo3",
    "reqwest",
    "serde",
    "serde_json",
    "sqlx",
    "stripe-rs",
    "validator",
    "zeta-protos"
]
wasm = ["wasm-bindgen", "js-sys", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]
python = ["pyo3", "pyo3-build-config"]
lua = ["mlua"]
python-wasm = ["pyo3", "wasm-bindgen", "js-sys", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]

[dev-dependencies]
actix-rt = "2.5"
serde_test = "1.0"
rstest = "0.11"
[package.metadata]
name = "zeta-reticula-api"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["default", "server", "wasm", "python", "lua", "python-wasm"]

[package.metadata.pyo3]
extension-module = true

[package.metadata.wasm-bindgen]
target = "web"

[package.metadata.wasm-bindgen-futures]
target = "web"


[build-dependencies]
tonic-build = "0.10"
pyo3-build-config = { version = "0.19", optional = true }



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
rpath = false
strip = true
panic = "abort"
overflow-checks = false

[profile.wasm-release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
rpath = false
strip = true
panic = "abort"
overflow-checks = false