[package]
name = "zeta-reticula-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]  # Enable WASM and Python bindings

[dependencies]
actix-web = { version = "4.11", optional = true }
actix-multipart = { version = "0.6", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
llm_rs = { path = "../llm-rs", features = ["wasm"], optional = true }
salience-engine = { path = "../salience-engine", features = ["wasm"], optional = true }
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
thiserror = { version = "1.0", optional = true }
validator = { version = "0.16", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
js-sys = { version = "0.3.64", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
sled = { version = "0.34", optional = true }
crossbeam = { version = "0.8", optional = true }
dashmap = { version = "5.4", optional = true }
ndarray = { version = "0.15", optional = true }
half = { version = "2.2", optional = true }
openblas-src = { version = "0.10", optional = true }
rustc-hash = { version = "1.1", optional = true }
argmin = { version = "0.8", optional = true }
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }
mlua = { version = "0.9", features = ["lua54"], optional = true }
uuid = { version = "1.2", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
# stripe-rs is temporarily disabled due to dependency conflicts
# stripe = { version = "0.22.0", default-features = false, features = ["rustls"], optional = true }
reqwest = { version = "0.11.27", features = ["json", "blocking", "rustls-tls"], default-features = false, optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
oauth2 = { version = "5.0.0", default-features = false, optional = true }
prost-types = { version = "0.12", optional = true }
serde_qs = { version = "0.9", optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "json"], optional = true }
zeta-protos = { path = "../protos", optional = true }
lru = { version = "0.8", optional = true }
log4rs = { version = "1.2", optional = true }
once_cell = { version = "1.17", optional = true }

[features]
enterprise = []
unlimited-inferences = []
default = []
server = [
    "tokio",
    "actix-web",
    "actix-multipart",
    "sled",
    "crossbeam",
    "dashmap",
    "ndarray",
    "half",
    "openblas-src",
    "argmin",
    "bincode",
    "futures",
    "jsonwebtoken",
    "mlua",
    "oauth2",
    "pyo3",
    "reqwest",
    "serde",
    "serde_json",
    "sqlx",
    "validator",
    "zeta-protos"
]
wasm = ["wasm-bindgen", "js-sys", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]
python = ["pyo3", "pyo3-build-config"]
lua = ["mlua"]
python-wasm = ["pyo3", "wasm-bindgen", "js-sys", "wasm-bindgen-futures", "llm_rs/wasm", "salience-engine/wasm", "ndarray", "half"]

[dev-dependencies]
actix-rt = "2.5"
serde_test = "1.0"
rstest = "0.11"
[package.metadata]
name = "zeta-reticula-api"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
features = ["default", "server", "wasm", "python", "lua", "python-wasm"]

[package.metadata.pyo3]
extension-module = true

[package.metadata.wasm-bindgen]
target = "web"

[package.metadata.wasm-bindgen-futures]
target = "web"


[build-dependencies]
tonic-build = "0.10"
pyo3-build-config = { version = "0.19", optional = true }



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
rpath = false
strip = true
panic = "abort"
overflow-checks = false

[profile.wasm-release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
incremental = false
rpath = false
strip = true
panic = "abort"
overflow-checks = false