[package]
name = "kvquant-rs-temp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
log = "0.4"
ndarray = "0.15"
half = "2.2"
rustc-hash = "1.1"
argmin = "0.8"
uuid = { version = "1.2", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_qs = "0.9"
thiserror = "1.0"
bumpalo = "3.0"
rayon = "1.8"
rand_distr = "0.4"
neon = { version = "0.10", optional = true }

[features]
default = []
node = ["neon"]

[lib]
path = "src/lib.rs"
