[package]
name = "kvquant-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dependencies]
bincode = "1.3"
rand = "0.8"
rand_distr = "0.4"
ndarray = { version = "0.15", features = ["serde"] }
# Core dependencies
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
dashmap = "5.5"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }
neon = { version = "0.10", optional = true }
mlua = { version = "0.9", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
js-sys = { version = "0.3.64", optional = true }

[features]
default = []
node = ["neon"]
python = ["pyo3/extension-module"]
lua = ["mlua"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[lib]
path = "src/lib.rs"
