[package]
name = "master-service"
version = "0.1.0"
edition = "2021"
description = "Master service for Zeta Reticula's distributed AI system"
license = "Apache-2.0"

[lib]
name = "master_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1.88"
bytes = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tonic = "0.10"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

# Add any other dependencies that might be needed by the master service
