[package]
name = "master-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
zeta-vault-synergy = { path = "../zeta-vault-synergy" }
p2pstore = { path = "../p2pstore" }