[package]
name = "ns-router-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
salience-engine = { path = "../salience-engine" }
llm-rs = { path = "../llm-rs" } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"  # For parallel processing
log = "0.4"
egg = "0.9"

[profile.release]
opt-level = 3