[package]
name = "ns-router-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A neurosymbolic router for inference requests that combines neural and symbolic approaches"
repository = "https://github.com/yourusername/ns-router-rs"
homepage = "https://github.com/yourusername/ns-router-rs"
documentation = "https://docs.rs/ns-router-rs"
keywords = ["neurosymbolic", "router", "inference", "nlp"]
categories = ["algorithms", "api-bindings", "artificial-intelligence"]

[dependencies]
# Core dependencies
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"  # For better error types
log = { version = "0.4", features = ["std"] }  # Required for logging
lazy_static = "1.4"  # For static initialization and rule definitions
tokio = { version = "1.32", features = ["rt-multi-thread", "sync", "full"] }  # Async runtime
lru = "0.10"  # For LRU cache
futures = "0.3"  # For async/await support

# Symbolic reasoning
egg = { version = "0.9", features = ["serde-1"], optional = true }  # For symbolic reasoning
regex = "1.10"  # For pattern matching in symbolic rules

# Web server dependencies (optional)
actix-web = { version = "4.11", optional = true, features = ["macros"] }  # Web server framework
actix-multipart = { version = "0.6", optional = true }  # For handling multipart form data

# Parallel processing (optional)
rayon = { version = "1.8", optional = true }  # For parallel processing
ndarray = { version = "0.15", optional = true }  # For numerical operations
half = { version = "2.2", optional = true }  # For half-precision floating point support
openblas-src = { version = "0.10", optional = true }  # Optional OpenBLAS support
rustc-hash = { version = "1.1", optional = true }  # For fast hash maps
argmin = { version = "0.8", optional = true }  # For optimization algorithms
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }  # For Python bindings
mlua = { version = "0.9", optional = true }  # For Lua bindings
reqwest = { version = "0.11", features = ["json"] }  # HTTP client
wasm-bindgen = { version = "0.2.87", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
js-sys = { version = "0.3.64", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.18"  # For parameterized tests
tempfile = "3.3"  # For tests that need temporary files
criterion = { version = "0.5", features = ["html_reports"] }  # For benchmarking

[features]
default = ["server"]
server = ["actix-web", "actix-multipart", "rayon", "egg", "ndarray", "half", "openblas-src", "argmin"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "ndarray", "half"]
python = ["pyo3"]
lua = ["mlua"]

[lib]
crate-type = ["cdylib", "rlib"]  # Enable WASM and Python bindings

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
