[package]
name = "quantize-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
salience-engine = { path = "../salience-engine", default-features = false }
ns-router-rs = { path = "../ns-router-rs" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"  # For numerical operations
half = "2.2"  # For half-precision floating point support
openblas-src = { version = "0.10", optional = true }  # Optional OpenBLAS support
rustc-hash = "1.1"  # For fast hash maps
argmin = "0.8"  # For optimization algorithms
pyo3 = { version = "0.19", optional = true, features = ["extension-module"] }  # For Python bindings
mlua = { version = "0.9", optional = true }  # For Lua bindings

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
python = ["pyo3"]
lua = ["mlua"]

[dev-dependencies]
actix-rt = "2.5"
serde_test = "1.0"

[build-dependencies]
tonic-build = "0.10"
pyo3-build-config = { version = "0.19", optional = true }

[package.metadata]
description = "Zeta Reticula: A Rust-based AI framework for building and deploying machine learning models."
license = "Apache-2.0"
